fix problem of dark mode of form and delete dataField

--- a/src/app/dashboard/form/form-editor/form-editor.component.scss
+++ b/src/app/dashboard/form/form-editor/form-editor.component.scss
@@ -15,7 +15,7 @@
 }
 .dropzone{
   width:700px;
-  background-color: rgb(255, 251, 251); 
+  // background-color: rgb(255, 251, 251); 
   // box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   box-shadow: 0 0 10px gray;
 }
